[tool.poetry]
name = "dokaben_rap"
version = "0.1.0"
description = ""
authors = ["masaki925 <masaki925@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gensim = "^3.8.3"
gunicorn = "^20.0.4"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
