[tool.poetry]
name = "dokaben_rap"
version = "0.1.0"
description = ""
authors = ["masaki925 <masaki925@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gensim = "^3.8.3"
gunicorn = "^20.0.4"
Flask = "^1.1.2"
mecab = "^0.996.2"
mecab-python3 = "^1.0.3"
bert-score = "^0.3.7"
fugashi = "^1.0.5"
ipadic = "^1.0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
